force-app/main/default/objects/nvl_obj_airport__c/fields/nvl_fld_IATACode__c.field-meta.xml
<CustomField>
    <fullName>nvl_fld_IATACode__c</fullName>
    <label>IATA Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>