force-app/main/default/objects/nvl_obj_airport__c/fields/nvl_fld_latitude__c.field-meta.xml
<CustomField>
    <fullName>nvl_fld_latitude__c</fullName>
    <label>Latitude</label>
    <precision>8</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>