force-app/main/default/objects/nvl_obj_airport__c/fields/nvl_fld_longitude__c.field-meta.xml
<CustomField>
    <fullName>nvl_fld_longitude__c</fullName>
    <label>Longitude</label>
    <precision>11</precision>
    <required>true</required>
    <scale>8</scale>
    <type>Number</type>
</CustomField>