force-app/main/default/objects/nvl_obj_airport__c/validationRules/LongitudeRange.validationRule-meta.xml
<ValidationRule>
    <fullName>LongitudeRange</fullName>
    <active>true</active>
    <description>The range of the Longitude is from +180 to -180 degrees</description>
    <errorConditionFormula>OR(nvl_fld_longitude__c &lt; -180, nvl_fld_longitude__c &gt; 180)</errorConditionFormula>
    <errorDisplayField>nvl_fld_longitude__c</errorDisplayField>
    <errorMessage>The range of the Longitude is from +180 to -180 degrees</errorMessage>
</ValidationRule>